Add BBB library files. Some needed to be built from source